--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.2",
     "@types/prop-types": "^15.7.3",
     "@types/react-helmet": "^6.1.0",
@@ -14,8 +15,11 @@
     "@types/styled-components": "^5.1.3",
     "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
+    "history": "^5.0.0",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
