--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,17 @@
-version: '3'
+version: '3.8'
 services:
   web:
-    container_name: coby_web
-    restart: always
     build: .
     ports:
-      - '80:8080'
+      - '8080:80'
+    restart: always
+    env_file:
+      - .env
+    volumes:
+      - .:/go/src/github.com/cobyeastwood/coby_web
+  client:
+    build: ./client
+    volumes:
+      - ./client:/client
+    # ports:
+    #   - '3000:3000'
