--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,6 +18,7 @@
     "@types/styled-components": "^5.1.3",
     "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
+    "framer-motion": "^4",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
