--- a/client/package.json
+++ b/client/package.json
@@ -1,61 +1,61 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/react": "^1.6.4",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/lodash": "^4.14.161",
-    "@types/node": "^14.11.2",
-    "@types/prop-types": "^15.7.3",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.3",
-    "@types/uuid": "^8.3.0",
-    "axios": "^0.20.0",
-    "framer-motion": "^4",
-    "history": "^5.0.0",
-    "lodash": "^4.17.20",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-ga": "^3.1.2",
-    "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.0",
-    "typescript": "^4.0.3",
-    "uuid": "^8.3.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "prop-types": "^15.7.2"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@chakra-ui/react": "^1.6.4",
+		"@emotion/react": "^11",
+		"@emotion/styled": "^11",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"@types/lodash": "^4.14.161",
+		"@types/node": "^14.11.2",
+		"@types/prop-types": "^15.7.3",
+		"@types/react-helmet": "^6.1.0",
+		"@types/react-redux": "^7.1.9",
+		"@types/react-router-dom": "^5.1.5",
+		"@types/styled-components": "^5.1.3",
+		"@types/uuid": "^8.3.0",
+		"axios": ">=0.21.1",
+		"framer-motion": "^4",
+		"history": "^5.0.0",
+		"lodash": "^4.17.20",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-ga": "^3.1.2",
+		"react-helmet": "^6.1.0",
+		"react-redux": "^7.2.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.3",
+		"redux-devtools-extension": "^2.13.8",
+		"redux-thunk": "^2.3.0",
+		"styled-components": "^5.2.0",
+		"typescript": "^4.0.3",
+		"uuid": "^8.3.0"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"prop-types": "^15.7.2"
+	}
 }
